Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/wildcards/DeclarationAnnotation.out
DeclarationAnnotation.java:15:10: compiler.err.annotation.type.not.applicable.to.type: DA
1 error
